--- a/templates/update_vehicle.html
+++ b/templates/update_vehicle.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
         <div style="display: flex; margin: 1rem; flex-direction: column; justify-content: center; align-items: center;">
-                <form action="/update_one/{{ vehicle.id }}" method="POST">
+                <form action="/update_one/{{ vehicle._id }}" method="POST">
                   <div>
                       <h2 >Update a Vehicle</h2>
                   </div>
